cluster/apps/services/qbittorrent/qbittorrent.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent-deployment
  namespace: services
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: linuxserver/qbittorrent:latest
          ports:
            - name: web
              containerPort: 8080
            - name: qbitone
              containerPort: 6881
              protocol: UDP
            - name: qbittwo
              containerPort: 6881
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: qbittorrent-download
              mountPath: /downloads
          resources:
            limits:
              cpu: 256m
              memory: 512Mi
      volumes:
        - name: qbittorrent-download
          nfs:
            server: 10.2.1.2
            path: "/mnt/pool_01/Downloads"
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config-claim
---
kind: Service
apiVersion: v1
metadata:
  name: qbittorrent-web-service
  namespace: services
spec:
  externalTrafficPolicy: Local
  selector:
    app: qbittorrent
  ports:
    - protocol: UDP
      port: 80
      targetPort: 8080
      name: qbittorrent-web
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: services
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "false"
    hajimari.io/enable: "true"
    hajimari.io/appName: "qbittorrent"
    hajimari.io/icon: "dns"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
    - secretName: qbittorrent-tls
      hosts:
        - "qbittorrent.${SECRET_DOMAIN}"
  rules:
    - host: "qbittorrent.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent-web-service
                port:
                  number: 80
